--- a/index.html
+++ b/index.html
@@ -76,19 +76,21 @@
         <br><br>
         I'm a junior at USC studying Neuroscience and Data Science.
         <br><br>
-        Some things I like:
+        I am currently Managing Director of LavaLab.
+        I spend my time thinking about healthtech solutions, finance, and personal growth hacking. 
         
         <div style="margin: 0 0 0 15px">
-            <br><span style="word-spacing: 6px">🧘‍♂️  health</span> and personal growth
-            <br><span style="word-spacing: 6px">🧠  epilepsy research</span>
-            <br><span style="word-spacing: 6px">📊  finance</span>
-            <br><span style="word-spacing: 6px">⚽  soccer</span>  
+            I've worked at:
+            <br><span style="word-spacing: 6px">🧘‍♂️  First Round Capital</span> and personal growth
+            <br><span style="word-spacing: 6px">🧠  J.P. Morgan</span>
+            <br><span style="word-spacing: 6px">📊  Bank of America</span>
+            <br><span style="word-spacing: 6px">⚽  Intel</span>  
         </div>
     
         <br>
         I'm currently taking a gap semester to explore <a href="projects.html">projects</a> in computer science! 
         <br><br>
-        I want to help people lead meaningful, happy lives.
+        Here are my notes.
         <br><br>
 
         <i><b>Let's stay in touch!</b> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter</a>)</i>
