--- a/index.html
+++ b/index.html
@@ -76,18 +76,19 @@
         <br><br>
         I'm a junior at USC studying Neuroscience and Data Science.
         <br><br>
-        I am currently Managing Director of LavaLab.
+        I am currently Managing Director of <a href="http://https://usclavalab.org/" target="_blank">LavaLab</a>.
+        <br>
         I spend my time thinking about healthtech solutions, finance, and personal growth hacking. 
-        
+        <br><br>
         <div style="margin: 0 0 0 15px">
             I've worked at:
-            <br><span style="word-spacing: 6px">🧘‍♂️  First Round Capital</span> and personal growth
+            <br><span style="word-spacing: 6px">🧘‍♂️  First Round Capital</span>
             <br><span style="word-spacing: 6px">🧠  J.P. Morgan</span>
             <br><span style="word-spacing: 6px">📊  Bank of America</span>
             <br><span style="word-spacing: 6px">⚽  Intel</span>  
         </div>
     
-        <br>
+        <br><br>
         I'm currently taking a gap semester to explore <a href="projects.html">projects</a> in computer science! 
         <br><br>
         Here are my notes.
