--- a/index.html
+++ b/index.html
@@ -74,14 +74,11 @@
 
         Hey! I'm Natalia.
         <br><br>
-        I'm a junior at USC studying Neuroscience and Data Science.
-        <br><br>
-        I am currently Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>.
+        I am studying Neuroscience + Data Science and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>.
         <br><br>
         I spend my time thinking about healthtech solutions, finance, and personal growth hacking. 
         <br><br>
-        <div style="margin: 0 0 0 15px">
-        I've worked at First Round Capital, J.P. Morgan, Bank of America, and Intel.
+        Previously, I built community at First Round Capital, worked on M&A at J.P. Morgan,and conducted microbiota research at Intel.
         </div>
     
         <br><br>
