--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 
         Hey! I'm Natalia.
         <br><br>
-        I am studying Neuroscience + Data Science and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>.
-        <br><br>
-        I spend my time thinking about healthtech solutions, finance, and personal growth hacking. 
+        I am studying Neuroscience + Data Science and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>
         <br><br>
         Previously, I built community at First Round Capital, worked on M&A at J.P. Morgan,and conducted microbiota research at Intel.
         </div>
