--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
 
         Hey! I'm Natalia.
         <br><br>
-        I am studying Neuroscience + Data Science and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>
+        I am studying Neuroscience and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>
         <br><br>
         Previously, I built community at First Round Capital, worked on M&A at J.P. Morgan,and conducted microbiota research at Intel.
-        </div>
-    
         <br><br>
         I'm currently taking a gap semester to explore <a href="projects.html">projects</a> in computer science! 
         <br><br>
@@ -87,6 +85,7 @@
 
         <i><b>Let's stay in touch!</b> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter</a>)</i>
  
+        </div>
         
    <footer>  
      <br><br>
