--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
 
         Hey! I'm Natalia.
         <br><br>
-        I am studying Neuroscience and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab</a>
+        I am studying Neuroscience and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab.</a>
         <br><br>
-        Previously, I built community at First Round Capital, worked on M&A at J.P. Morgan,and conducted microbiota research at Intel.
+        Previously, I built community at First Round Capital, worked on M&A at J.P. Morgan, and conducted microbiota research at Intel.
         <br><br>
         I'm currently taking a gap semester to explore <a href="projects.html">projects</a> in computer science! 
         <br><br>
         Here are my notes.
         <br><br>
 
-        <i><b>Let's stay in touch!</b> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter</a>)</i>
+        <i>Let's stay in touch! (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter</a>)</i>
       
         <footer>  
         <br><br>
