--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         Here are my notes.
         <br><br>
 
-        <i>Let's stay in touch! (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter</a>)</i>
+        <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter</a>)
       
         <footer>  
         <br><br>
