--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <br><br>
         I am studying Neuroscience and am Managing Director of <a href="http://usclavalab.org/" target="_blank">LavaLab.</a>
         <br><br>
-        Previously, I built community at First Round Capital, worked on M&A at J.P. Morgan, and conducted microbiota research at Intel.
+        Previously, I built community at <a class="bio-underline" href="https://firstround.com/" target="_blank">First Round Capital</a>, worked on M&A at J.P. Morgan, and conducted microbiota research at Intel.
         <br><br>
         I'm currently taking a gap semester to explore <a href="projects.html">projects</a> in computer science! 
         <br><br>
