--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       
       <div class="menu">
         <a href="https://twitter.com/natalianmurillo' target="_blank">
-          <img class="twitter" src="pics/twitter.svg" alt="Twitter" aria-describedby="tippy-1">
+          <img class="twitter" src="pics/twitter.png" alt="Twitter" aria-describedby="tippy-1">
         </a>                                                                                    
         <a href="https://twitter.com/natalianmurillo' target="_blank">
-          <img class="blog-icon" src="pics/writing.png" alt="Blog">
+          <img class="blog-icon" src="pics/writing.jpg" alt="Blog">
         </a>                                                                                      
       </div>
                                                      
