--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <img class="twitter" src="pics/twitter.png" alt="Twitter" aria-describedby="tippy-1">
         </a>                                                                                    
         <a href="https://twitter.com/natalianmurillo' target="_blank">
-          <img class="blog-icon" src="pics/writing.jpg" alt="Blog">
+          <img class="blog-icon" src="pics/writing.png" alt="Blog">
         </a>                                                                                      
       </div>
                                                      
