--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         Here are my notes.
         <br><br>
 
-        <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank">Twitter <img class="twitter" src="pics/twitter.svg" alt="Twitter" aria-describedby="tippy-1"></a>)
+        <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank"><img class="twitter" src="pics/twitter.svg" alt="Twitter" aria-describedby="tippy-1"></a>)
       
         <footer>  
         <br><br>
