--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br><br>
         I'm currently taking a gap semester to explore <a class="bio-underline" href="projects.html">projects</a> in computer science! 
         <br><br>
-        Here are my notes.
+        Here are my <a class="bio-underline" href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485">notes</a>.
         <br><br>
 
         <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank"><img class="twitter" src="pics/twitter.svg" alt="Twitter"></a>)
