--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     <div id="content">
       
       <div class="menu">
-        <a href="https://twitter.com/natalianmurillo' target="_blank">
+        <a href="https://twitter.com/natalianmurillo" target="_blank">
           <img class="twitter" src="pics/twitter.png" alt="Twitter">
         </a>                                                                                    
-        <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485' target="_blank">
+        <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
           <img class="blog-icon" src="pics/writing.png" alt="Blog">
         </a>                                                                                      
       </div>
