--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       
       <div class="menu">
         <a href="https://twitter.com/natalianmurillo" target="_blank">
-          <img class="twitter" src="pics/twitter.png" alt="Twitter">
+          <img class="twitter" src="pics/twitter.svg" alt="Twitter">
         </a>                                                                                    
         <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
           <img class="blog-icon" src="pics/writing.png" alt="Blog">
@@ -106,7 +106,7 @@
         Here are my <a class="bio-underline" href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485">notes</a>.
         <br><br>
 
-        <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank"><img class="twitter" src="pics/twitter.png" alt="Twitter"></a>)
+        <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank"><img class="twitter" src="pics/twitter.svg" alt="Twitter"></a>)
       
         <footer>  
         <br><br>
