--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@
                border-bottom: 1px dashed #bbbbbb; 
         }
 
-        .twitter, .blog-icon {
+        .twitter {
             width: 40px;
             margin-bottom: 0px; 
+        }
+      
+        .blog-icon {
+            width: 20px;
+            margin-left: 15px;
+            margin-right: 10px;
+            padding-top: 10px; 
         }
 
 
