--- a/index.html
+++ b/index.html
@@ -61,13 +61,8 @@
         .bio-underline {
                border-bottom: 1px dashed #bbbbbb; 
         }
-
-        .twitter {
-            width: 40px;
-            margin-bottom: 0px; 
-        }
       
-        .blog-icon {
+        .blog-icon, .twitter {
             width: 20px;
             margin-left: 15px;
             margin-right: 10px;
