--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
                border-bottom: 1px dashed #bbbbbb; 
         }
       
-        .blog-icon, .twitter {
+        .twitter {
+            width: 30px;
+            margin-bottom: 0px; 
+        }
+      
+        .blog-icon {
             width: 20px;
             margin-left: 15px;
             margin-right: 10px;
