--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       
         .twitter {
             width: 30px;
-            margin-bottom: 0px; 
+            margin-top: 5px; 
         }
       
         .blog-icon {
