--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       
         .twitter {
             width: 30px;
-            margin-top: 15px; 
+            padding-top: 15px; 
         }
       
         .blog-icon {
