--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
       
         .twitter {
             width: 30px;
-            padding-top: 15px; 
         }
       
         .blog-icon {
             width: 20px;
             margin-left: 15px;
             margin-right: 10px;
-            padding-top: 10px; 
+            padding-top: 0px; 
+            padding-bottom: 15px; 
         }
 
 
