--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
             padding-bottom: 6px; 
         }
 
-
+        .code {
+            font-family: "mono";
+            font-size: 12pt;
+            color: #c95959;
+            display: inline-flex; 
+        }
 
         @media (max-width: 450px){
             #content {
@@ -113,7 +118,7 @@
         Here are my <a class="bio-underline" href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485">notes</a>.
         <br><br>
 
-        <i>Let's stay in touch!</i> (find me on <a href="http://twitter.com/natalianmurillo/" target="_blank"><img class="twitter" src="pics/twitter.svg" alt="Twitter"></a>)
+        <i>Let's stay in touch!</i> Email me at <span class="code">natalianmurillo@gmail.com</span>
       
         <footer>  
         <br><br>
