--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         }
 
         #name {
+            font-family: 'Frank Ruhl Libre'
             font-weight: 500;
             color: green;
             font-size: 40px;
