--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Natalia Murillo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
     
     <style>
         html, body{
-            font-family: -apple-system, BlinkMacSystemFont, 'Roboto','Helvetica Neue', sans-serif;
+            font-family: 'Alegreya', serif;
 
             min-width: 100%;
             min-height: 100%;
