--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         #name {
-            font-family: 'Frank Ruhl Libre'
+            font-family: 'Alegreya', serif;
             font-weight: 500;
             color: green;
             font-size: 40px;
