--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet">
     
     <style>
-        html, body{
+        body{
             font-family: 'Frank Ruhl Libre', serif; 
 
             min-width: 100%;
