--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         .code {
             font-family: 'Source Code Pro', monospace;
             font-size: 12pt;
-            color: #c95959;
+            color: green;
             display: inline-flex; 
         }
 
