--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             margin: 50px auto;
             font-size: 18px;
             font-weight: 300;
+            font-family: 'Frank Ruhl Libre', serif; 
         }
 
         #name {
