--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
                                                      
  
         <div id="name">Natalia Murillo</div>
-        I am studying Neuroscience and am Managing Director of <a class="bio-underline" href="http://usclavalab.org/" target="_blank">LavaLab.</a>
+        I am studying Neuroscience and Data Science at the University of Southern California.
+        I am currently Managing Director of <a class="bio-underline" href="http://usclavalab.org/" target="_blank">LavaLab.</a>
         <br><br>
         Previously, I built community at <a class="bio-underline" href="https://firstround.com/" target="_blank">First Round Capital</a>, worked on portfolio management at <a class="bio-underline" href="https://chanzuckerberg.com/about/leaders/#david-lee" target="_blank">CZI</a>, and conducted microbiota research at <a class="bio-underline" href="https://www.ncbi.nlm.nih.gov/nuccore/1033915654" target="_blank">Intel</a>.
         <br><br>
-        I'm currently taking a gap semester to explore <a class="bio-underline" href="projects.html">projects</a> in computer science! 
+        I'm taking a gap semester to explore <a class="bio-underline" href="projects.html">projects</a> in computer science! 
         <br><br>
         Here are my <a class="bio-underline" href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485">notes</a>.
         <br><br>
