--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <i>Let's stay in touch!</i> Email me at <span class="code">natalianmurillo@gmail.com</span>
       
         <footer>  
+        <img class="divider" src="pics/cross.png" alt="Divider">
         <br><br>
         <a id="resume" target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1eQGOsQSNxGy2g2fiVOh1dNpQTyqom1DP/view?usp=sharing">resume</a>
         </footer>
