--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
             padding-top: 0px; 
             padding-bottom: 6px; 
         }
+      
+        .divider {
+            width:50%;
+        }
 
         .code {
             font-family: 'Source Code Pro', monospace;
