--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             color: green;
             display: inline-flex; 
         }
+      
+        .divider {
+          width: 50%
+        }
 
         @media (max-width: 450px){
             #content {
