--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         body{
             font-family: 'Frank Ruhl Libre', serif; 
-
+            background-color: #FFFAEA;
             min-width: 100%;
             min-height: 100%;
             margin: 0;
