--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                                                      
  
         <div id="name">Natalia Murillo</div>
-        I am a junior studying Neuroscience and Data Science at the University of Southern California.
+        I am a junior studying Neuroscience and Data Science at the University of Southern California.<br><br>
         Currently, I'm Managing Director of <a class="bio-underline" href="http://usclavalab.org/" target="_blank">LavaLab.</a>
-        Previously, I built community at <a class="bio-underline" href="https://firstround.com/" target="_blank">First Round Capital</a>, <br>
-        worked on portfolio management at <a class="bio-underline" href="https://chanzuckerberg.com/about/leaders/#david-lee" target="_blank">CZI</a>, <br>
-        and conducted microbiota research at <a class="bio-underline" href="https://www.ncbi.nlm.nih.gov/nuccore/1033915654" target="_blank">Intel</a>.
+        Previously, I built community at <a class="bio-underline" href="https://firstround.com/" target="_blank">First Round Capital</a><br>, 
+        worked on portfolio management at <a class="bio-underline" href="https://chanzuckerberg.com/about/leaders/#david-lee" target="_blank">CZI</a>, 
+        and <br>conducted microbiota research at <a class="bio-underline" href="https://www.ncbi.nlm.nih.gov/nuccore/1033915654" target="_blank">Intel</a>.
         <br><br>
         Here are my <a class="bio-underline" href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485">notes</a>.
         <br><br>
