--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="pics/avatar.png"/>
     
     <style>
         body{
