--- a/index.html
+++ b/index.html
@@ -124,12 +124,15 @@
     <div id="content">
       
       <div class="menu">
-        <a href="https://twitter.com/natalianmurillo" target="_blank">
+        <a href="/work.html" target="_blank">
           <img class="twitter" src="pics/twitter.svg" alt="Twitter">
         </a>                                                                                    
         <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
           <img class="blog-icon" src="pics/writing.png" alt="Blog">
-        </a>                                                                                      
+        </a>    
+        <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
+          <img class="blog-icon" src="pics/paint.png" alt="Work">
+        </a>  
       </div>
                                                      
  
