--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
           <img class="blog-icon" src="pics/writing.png" alt="Blog">
         </a>    
-        <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
+        <a href="/work.html" target="_blank">
           <img class="blog-icon" src="pics/paint.png" alt="Work">
         </a>  
       </div>
