--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div id="content">
       
       <div class="menu">
-        <a href="/work.html" target="_blank">
+        <a href="https://twitter.com/natimuril" target="_blank">
           <img class="twitter" src="pics/twitter.svg" alt="Twitter">
         </a>                                                                                    
         <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
