--- a/work.html
+++ b/work.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
    <style>
+        html {
+           color: #fffaea;
+           display: block;
+        }
+      
         body{
             font-family: 'graphik'; 
-            color: $505050
+            color: #505050
             background-color: #fffaea;
             width: 80%;
             margin: auto;
@@ -97,7 +102,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company --> </a>
+              <a href="" target ="_blank">Company → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -112,7 +117,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company --> </a>
+              <a href="" target ="_blank">Company → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -127,7 +132,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company --> </a>
+              <a href="" target ="_blank">Company → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -142,7 +147,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company --> </a>
+              <a href="" target ="_blank">Company → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -157,7 +162,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company --> </a>
+              <a href="" target ="_blank">Company → </a>
             </p>
             <ul></ul>
             <ul></ul>
