--- a/work.html
+++ b/work.html
@@ -102,7 +102,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company → </a>
+              <a href="" target ="_blank">Block Parties → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -117,7 +117,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company → </a>
+              <a href="" target ="_blank">LavaLab → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -132,7 +132,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company → </a>
+              <a href="" target ="_blank">Boop → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -147,7 +147,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company → </a>
+              <a href="" target ="_blank">Nova → </a>
             </p>
             <ul></ul>
             <ul></ul>
@@ -162,7 +162,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Company → </a>
+              <a href="" target ="_blank">Chan Zuckerberg Initiative → </a>
             </p>
             <ul></ul>
             <ul></ul>
