--- a/work.html
+++ b/work.html
@@ -6,6 +6,8 @@
            display: block;
         }
       
+ 
+      
         body{
             font-family: 'graphik'; 
             color: #505050
@@ -120,6 +122,17 @@
        }
     </style>
   <head>
+     <div class="menu">
+        <a href="https://twitter.com/natimuril" target="_blank">
+          <img class="twitter" src="pics/twitter.svg" alt="Twitter">
+        </a>                                                                                    
+        <a href="https://www.notion.so/Memos-from-Natalia-404046aec9df4ef9936234df07451485" target="_blank">
+          <img class="blog-icon" src="pics/writing.png" alt="Blog">
+        </a>    
+        <a href="/notes/work.html" target="_blank">
+          <img class="blog-icon" src="pics/paint.png" alt="Work">
+        </a>  
+      </div>
   </head>
   <body>
     <div class="brunch"></div>
