--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
       
         body{
             font-family: 'graphik'; 
-            color: #505050
+            color: #505050;
             background-color: #fffaea;
             width: 80%;
             margin: auto;
