--- a/work.html
+++ b/work.html
@@ -160,9 +160,8 @@
            margin-right: 30px;
         }
       
-        work-wrapper{
+        div.work-wrapper{
            display:flex;
-           width: 100%;
       }
      
        home-container {
