--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             min-height: 100%;
             margin: 0;
             padding: 0;
-            background-color: white;
+            background-color: #fffaea;
             color: #212529;
         }
         
