--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div id="name">Natalia Murillo</div>
         I am a junior studying Neuroscience and Data Science at the University of Southern California.<br><br>
         Currently, I'm Managing Director of <a class="bio-underline" href="http://usclavalab.org/" target="_blank">LavaLab.</a>
-        Previously, I built community at <a class="bio-underline" href="https://firstround.com/" target="_blank">First Round Capital</a>,<br> 
+        Previously, I built community at <a class="bio-underline" href="https://firstround.com/" target="_blank">First <br> Round Capital</a>,
         worked on a token economy thesis at <a class="bio-underline" href="https://chanzuckerberg.com/about/leaders/#david-lee" target="_blank">CZI</a>, 
         and conducted microbiota research at <a class="bio-underline" href="https://www.ncbi.nlm.nih.gov/nuccore/1033915654" target="_blank">Intel</a>.
         <br><br>
