--- a/work.html
+++ b/work.html
@@ -176,7 +176,11 @@
        }
     </style>
   <head>
-     <div id = "content">
+
+  </head>
+  <body>
+    <div class="brunch">
+            <div id = "content">
         <div class="menu">
            <a href="https://twitter.com/natimuril" target="_blank">
              <img class="twitter" src="pics/twitter.svg" alt="Twitter">
@@ -189,9 +193,7 @@
            </a>  
          </div>
      </div>
-  </head>
-  <body>
-    <div class="brunch"></div>
+    </div>
     <div class="brunch"></div>
     <div class="main">
       <div class="menu"></div>
