--- a/work.html
+++ b/work.html
@@ -207,7 +207,7 @@
             <p class="workplace">
               <a href="" target ="_blank">Block Parties → </a>
             </p>
-            <ul>Developed a group-purchasing chrome extension built on NFT marketplaces.</ul>
+             <ul>"Developed a <a class="bio-underline" href="https://medium.com/block-parties/block-parties-db4467a2e1d8" target = "_blank">group-purchasing chrome extension</a>" built on NFT marketplaces."</ul>
             <ul>Led product strategy and protocol decentralization efforts. </ul>
           </div>
         </div>
@@ -235,7 +235,7 @@
             <p class="workplace">
               <a href="" target ="_blank">Boop → </a>
             </p>
-            <ul>Launched a live-speed dating app. </ul>
+            <ul>Launched a <a class="bio-underline" href="https://docs.google.com/presentation/d/1-_boCbjFf-0iVnDcZax0HCRM7Iz-t_r570dqHK0DaHo/edit#slide=id.p" target = "_blank">live-speed dating app. <a/></ul>
             <ul>Received 7,000 sign ups in first week Beta. </ul>
           </div>
         </div>
