--- a/work.html
+++ b/work.html
@@ -207,7 +207,7 @@
             <p class="workplace">
               <a href="" target ="_blank">Block Parties → </a>
             </p>
-             <ul>"Developed a <a class="bio-underline" href="https://medium.com/block-parties/block-parties-db4467a2e1d8" target = "_blank">group-purchasing chrome extension</a>" built on NFT marketplaces."</ul>
+             <ul>Developed a <a class="bio-underline" href="https://medium.com/block-parties/block-parties-db4467a2e1d8" target = "_blank">group-purchasing chrome extension</a> built on NFT marketplaces.</ul>
             <ul>Led product strategy and protocol decentralization efforts. </ul>
           </div>
         </div>
@@ -221,7 +221,7 @@
               <a href="" target ="_blank">LavaLab → </a>
             </p>
             <ul>Systemized communication between 200+ alumni network while launching a 60-person mentorship program. </ul>
-            <ul>Launched LavaLab for Impact: virtual cohort and open curriculum to make entrepreneurship inclusive and accessible.</ul>
+            <ul>Launched <a class="bio-underline" href="https://learn.usclavalab.org/" target = "_blank" LavaLab for Impact: virtual cohort and open curriculum to make entrepreneurship inclusive and accessible.</ul>
             <ul>Led 3 team projects to exit or acquisition.</ul>
             <ul>Spreaheaded community inititiaves during remote environment, leading to a 60% increase in engagement.</ul>
           </div>
