--- a/work.html
+++ b/work.html
@@ -174,9 +174,17 @@
        div {
           display: block;
        }
+     
+       @media (max-width: 450px){
+            #content {
+                width: 80%;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 16px;
+            }
     </style>
   <head>
-
+    <link rel="shortcut icon" type="image/png" href="pics/avatar.png"/>
   </head>
   <body>
     <div class="brunch">
