--- a/work.html
+++ b/work.html
@@ -229,7 +229,7 @@
               <a href="" target ="_blank">LavaLab → </a>
             </p>
             <ul>Systemized communication between 200+ alumni network while launching a 60-person mentorship program. </ul>
-            <ul>Launched <a class="bio-underline" href="https://learn.usclavalab.org/" target = "_blank"> LavaLab for Impact: virtual cohort and open curriculum to make entrepreneurship inclusive and accessible.</a></ul>
+            <ul>Launched <a class="bio-underline" href="https://learn.usclavalab.org/" target = "_blank"> LavaLab for Impact</a>: virtual cohort and open curriculum to make entrepreneurship inclusive and accessible.</ul>
             <ul>Led 3 team projects to exit or acquisition.</ul>
             <ul>Spreaheaded community inititiaves during remote environment, leading to a 60% increase in engagement.</ul>
           </div>
