--- a/work.html
+++ b/work.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-   <style>
+   
+  <head>
+    <link rel="shortcut icon" type="image/png" href="pics/avatar.png"/>
+     <title>Recent Work</title>
+     <style>
         html {
            color: #fffaea;
            display: block;
@@ -183,8 +187,7 @@
                 font-size: 16px;
             }
     </style>
-  <head>
-    <link rel="shortcut icon" type="image/png" href="pics/avatar.png"/>
+     
   </head>
   <body>
     <div class="brunch">
