--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
       
         content {
             width: 80%;
-            margin: 50px auto;
+            margin-left: auto;
             font-size: 18px;
             font-weight: 300;
             font-family: 'Frank Ruhl Libre', serif; 
