--- a/work.html
+++ b/work.html
@@ -248,7 +248,7 @@
             <p class="workplace">
               <a href="" target ="_blank">Boop → </a>
             </p>
-            <ul>Launched a <a class="bio-underline" href="https://docs.google.com/presentation/d/1-_boCbjFf-0iVnDcZax0HCRM7Iz-t_r570dqHK0DaHo/edit#slide=id.p" target = "_blank">live-speed dating app. <a/></ul>
+            <ul>Launched a <a class="bio-underline" href="https://docs.google.com/presentation/d/1ewu6wumqsXd-0COncS4QVaLWq3IIFhBmRU6lAxmWzmc/edit?usp=sharing" target = "_blank">live-speed dating app. <a/></ul>
             <ul>Received 7,000 sign ups in first week beta. </ul>
           </div>
         </div>
