--- a/work.html
+++ b/work.html
@@ -218,7 +218,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-              <a href="" target ="_blank">Block Parties → </a>
+               <a href="" target ="_blank"><b>Block Parties</b> → </a>
             </p>
              <ul>Developed a <a class="bio-underline" href="https://medium.com/block-parties/block-parties-db4467a2e1d8" target = "_blank">group-purchasing chrome extension</a> built on NFT marketplaces.</ul>
             <ul>Led product strategy and protocol decentralization efforts. </ul>
