--- a/work.html
+++ b/work.html
@@ -202,7 +202,7 @@
              <img class="blog-icon" src="pics/paint.png" alt="Work">
            </a>  
            <a href="/notes" target="_blank">
-          <img class="blog-icon" src="pics/home.png" alt="Home">
+          <img class="blog-icon" src="pics/arrow.png" alt="Home">
            </a>
          </div>
      </div>
@@ -218,7 +218,7 @@
           </div>
           <div class="work">
             <p class="workplace">
-               <a href="" target ="_blank"><b>Block Parties</b> → </a>
+               <a href="" target ="_blank">Block Parties → </a>
             </p>
              <ul>Developed a <a class="bio-underline" href="https://medium.com/block-parties/block-parties-db4467a2e1d8" target = "_blank">group-purchasing chrome extension</a> built on NFT marketplaces.</ul>
             <ul>Led product strategy and protocol decentralization efforts. </ul>
