--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <footer>  
         <img class="divider" src="pics/cross.png" alt="Divider">
         <br>
-        <a id="resume" target="_blank" rel="noopener noreferrer" href="https://drive.google.com/file/d/1eQGOsQSNxGy2g2fiVOh1dNpQTyqom1DP/view?usp=sharing">resume</a>
+        <a id="resume" target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/1ISY7CxSGM1CGQYZ0zKDsmQ_TQO0qWApSGC2mz3IXXwY/edit?usp=sharing">resume</a>
         </footer>
  
         </div>
