--- a/work.html
+++ b/work.html
@@ -30,6 +30,10 @@
             font-weight: bold;
         }
 
+        a {
+             text-decoration: none;
+             text-align: left; 
+        }
         a:visited {
               color: blue; 
         }
@@ -259,7 +263,7 @@
             <ul>Built an aggregated resource finder for homeless individuals in DTLA. </ul>
           </div>
         </div>
-        
+
         <div class="work-wrapper">
           <div>
             <p class="date">2021</p>
