--- a/work.html
+++ b/work.html
@@ -260,7 +260,7 @@
             <p class="workplace">
               <a href="" target ="_blank">Nova → </a>
             </p>
-            <ul>Built an aggregated resource finder for homeless individuals in DTLA. </ul>
+             <ul>Built an aggregated <a class="bio-underline" href= "https://docs.google.com/presentation/d/1ZegR0yKGbyI0VauI7YM0EUbuRGjWq1JcT85heDfr99c/edit?usp=sharing" target="_blank">resource</a> finder for homeless individuals in DTLA. </ul>
           </div>
         </div>
 
